--- a/.github/workflows/aircall_sdr_stats.yml
+++ b/.github/workflows/aircall_sdr_stats.yml
@@ -2,7 +2,7 @@ name: Aircall SDR stats to Slack
 
 on:
   schedule:
-    - cron: "0 2 * * *" # 12:00 Australia/Brisbane
+    - cron: "0 2 * * 1-5" # 12:00 Australia/Brisbane
   workflow_dispatch:
 
 jobs:
